--- a/crates/webapp/index.html
+++ b/crates/webapp/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link data-trunk rel="copy-file" href="manifest.json">
+    <link data-trunk rel="copy-file" href="favicon.ico">
+    <link data-trunk rel="copy-file" href="logo192.png">
+    <link data-trunk rel="copy-file" href="logo512.png">
     <link data-trunk rel="css" href="index.css">
     <link data-trunk rel="icon" href="assets/logo.png">
     <link data-trunk rel="rust" data-bin="webapp">
+    <link rel="apple-touch-icon" href="logo192.png" />
+    <link rel="manifest" href="./manifest.json">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>AoC Oracle</title>
